tests/fixtures/invalid/round_float_set.py
# Cannot call round() with Float, Set[int]
x = round(1.0, {1, 2, 3})
